Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2015-12-29 13:52:08 -0500
  - Tweaked test skips based on cpantesters feedback

0.03      2015-12-26 17:28:45 -0700
  - Fixed (hopefully) test failure in
    test_alien_synthetic_libarchive.t
    when FFI::Platypus was installed
    but FFI::Raw was not

0.02      2015-12-25 22:18:53 -0700
  - Fixes for Windows.
  - First CPAN release.

0.01      2015-12-25 20:20:16 -0700
  - initial version