@@ -30,11 +30,13 @@ remove = File::Path
 remove = File::Copy
 remove = Config
 
-; comes with Test::Stream
-remove = Test::Stream::Context
-remove = Test::Stream::Exporter
-remove = Test::Stream::Plugin
-remove = Test::Stream::Plugin::Subtest
+; comes with Test2
+remove = Test2::API
+
+; comes with Test2::Suite
+remove = Test2::Bundle::Extended
+remove = Test2::Require
+remove = Test2::Require::Module
 
 ; optional
 remove = FFI::Platypus
@@ -46,7 +48,8 @@ remove = Alien::Libarchive
 
 [Prereqs]
 ExtUtils::ParseXS = 3.21
-Test::Stream      = 1.302023
+Test2 = 0.000042
+Test2::Suite = 0.000028
 
 [Author::Plicease::Upload]
 cpan = 1
